Refactor Model to use arrays instead of HashMaps